# zeabus_control

./: .CMakeLists.txt.swp  .package.xml.swp  CMakeLists.txt  package.xml
cfg/: PIDThruster.cfg  PIDandSaturation.cfg  PIDnonDiscrete.cfg  PidZTransform.cfg
include/: control_thruster.hpp  control_thruster_reconfigure.hpp  pid.hpp
parameter/: pid_thruster.yaml  pid_value.yaml  pid_z_transform.yaml  rpm_force_forward_table.csv  rpm_reverse_table.csv  throttle_force_table.txt
scripts/: backup_control_system.py  buffer_control.py  constant.py  control.py  control_interface.py  control_parameter.py  control_system.py  control_thruster.py  fuzzy_velocity.py  parameter.py  step_velocity.py  tune_parameter.py  zeabus_robot.py
src/: control_thruster.cpp  control_thruster_reconfigure.cpp  main.cpp  pid.cpp  test.cpp  thruster.cpp
