<?xml version="1.0"?>
<package format="2">

    <name>zeabus_control</name>
    <version>0.0.0</version>
    <description>This package is maintain by control part in software team</description>

    <maintainer email="supasan.k@ku.th">K.Supasan</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>
