<?xml version="1.0"?>
<package format="2">

    <name>zeabus_control</name>
    <version>0.0.0</version>
    <description>This package is maintain by control part in software team</description>

    <maintainer email="supasan.k@ku.th">K.Supasan</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>Boost</build_depend>
    <exec_depend>Boost</exec_depend>

    <build_depend>roscpp</build_depend>
    <exec_depend>roscpp</exec_depend>

    <build_depend>nav_msgs</build_depend>
    <exec_depend>nav_msgs</exec_depend>

    <build_depend>geometry_msgs</build_depend>
    <exec_depend>geometry_msgs</exec_depend>

    <build_depend>zeabus_utility</build_depend>
    <exec_depend>zeabus_utility</exec_depend>

    <build_depend>zeabus_elec_ros</build_depend>
    <exec_depend>zeabus_elec_ros</exec_depend>

    <build_depend>dynamic_reconfigure</build_depend>
    <exec_depend>dynamic_reconfigure</exec_depend>

    <build_depend>zeabus_library</build_depend>
    <exec_depend>zeabus_library</exec_depend>

</package>
